--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
         </ul>
     </div>
-    <script type="text/javascript" SRC="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
