--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="banner">
     <img alt="banner" src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="top-section-for-adding-element-to-list">
