--- a/index.html
+++ b/index.html
@@ -20,31 +20,33 @@
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="heading">Todo</h3>
     <ul id="incomplete-tasks">
-      <li><input type="checkbox">
+      <li class="no-edit-mode">
+        <input type="checkbox">
         <label class="task">Pay Bills</label><input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img alt="remove" src="./remove.svg"></button>
+        <button class="edit button">Edit</button>
+        <button class="delete button"><img alt="remove" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode"><input type="checkbox">
+      <li class="no-edit-mode edit-mode">
+        <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img alt="remove" src="./remove.svg"></button>
+        <button class="button edit">Save</button>
+        <button class="delete button"><img alt="remove" src="./remove.svg"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="heading">Completed</h3>
     <ul id="completed-tasks">
-      <li>
+      <li class="no-edit-mode">
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img alt="remove" src="./remove.svg"></button>
+        <button class="edit button">Edit</button>
+        <button class="delete button"><img alt="remove" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
