--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-  <div class="banner">
+  <section class="banner">
     <img alt="banner" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
+  </section>
+  <main class="centered-main-page-element">
     <p class="adding-element-to-list">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -49,7 +49,7 @@
         <button class="delete button"><img alt="remove" src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
