--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img alt="banner" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </section>
-  <main class="centered-main-page-element">
-    <p class="adding-element-to-list">
+  <main class="todo-app-container">
+    <p class="add-item-section">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
