--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <h3 class="heading">Todo</h3>
     <ul id="incomplete-tasks">
       <li class="no-edit-mode">
-        <input type="checkbox">
+        <input class="switch" type="checkbox">
         <label class="task">Pay Bills</label><input type="text" class="task">
         <button class="edit button">Edit</button>
         <button class="delete button"><img alt="remove" src="./remove.svg"></button>
       </li>
       <li class="no-edit-mode edit-mode">
-        <input type="checkbox">
+        <input class="switch" type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="button edit">Save</button>
@@ -42,7 +42,7 @@
     <h3 class="heading">Completed</h3>
     <ul id="completed-tasks">
       <li class="no-edit-mode">
-        <input type="checkbox" checked>
+        <input class="switch" type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit button">Edit</button>
