--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </section>
   <main class="todo-app-container">
-    <p class="add-item-section">
+    <div class="add-item-section">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
         <button class="button">Add</button>
       </div>
-    </p>
+    </div>
     <h3 class="heading">Todo</h3>
     <ul id="incomplete-tasks">
       <li class="no-edit-mode">
